@@ -420,7 +420,7 @@ bool jsfCompact() {
 #else
   /* If low on flash assume we only have a tiny bit of flash. Chances
    * are there'll only be one file so just erasing flash will do it. */
-  bool allocated = jsvGetBoolAndUnLock(jsfListFiles(NULL));
+  bool allocated = jsvGetBoolAndUnLock(jsfListFiles(NULL,0,0));
   if (!allocated) {
     jsfEraseAll();
     return true;
@@ -667,8 +667,11 @@ bool jsfWriteFile(JsfFileName name, JsVar *data, JsfFileFlags flags, JsVarInt of
   return true;
 }
 
-/// Return all files in flash as a JsVar array of names. If regex is supplied, it is used to filter the filenames using String.match(regexp)
-JsVar *jsfListFiles(JsVar *regex) {
+/** Return all files in flash as a JsVar array of names. If regex is supplied, it is used to filter the filenames using String.match(regexp)
+ * If containing!=0, file flags must contain one of the 'containing' argument's bits.
+ * Flags can't contain any bits in the 'notContaining' argument
+ */
+JsVar *jsfListFiles(JsVar *regex, JsfFileFlags containing, JsfFileFlags notContaining) {
   JsVar *files = jsvNewEmptyArray();
   if (!files) return 0;
 
@@ -677,6 +680,19 @@ JsVar *jsfListFiles(JsVar *regex) {
   memset(&header,0,sizeof(JsfFileHeader));
   if (jsfGetFileHeader(addr, &header, true)) do {
     if (header.name.firstChars != 0) { // if not replaced
+      JsfFileFlags flags = jsfGetFileFlags(&header);
+      if (notContaining&flags) continue;
+      if (containing && !(containing&flags)) continue;
+      if (flags&JSFF_STORAGEFILE) {
+        // find last char
+        int i = 0;
+        while (i+1<sizeof(header.name) && header.name.c[i+1]) i++;
+        // if last ch isn't \1 (eg first StorageFile) ignore this
+        if (header.name.c[i]!=1) continue;
+        // if we're specifically asking for StorageFile, remove last char
+        if (containing&JSFF_STORAGEFILE)
+          header.name.c[i]=0;
+      }
       JsVar *v = jsfVarFromName(header.name);
       bool match = true;
       if (regex) {
